# muonHorn

./: CMakeLists.txt  HornXGB_cluster.py  README.md  dataset.csv  horn_optimization.ipynb  horn_sim.cc  plot.ipynb  run.mac
.ipynb_checkpoints/: plot-checkpoint.ipynb
include/: Cli.hh  DetectorConstruction.hh  EventAction.hh  HornField.hh  Params.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
results/: best_design.json
runs/run_1760068779873_5540/: 6D_vector_run0_t0.csv  6D_vector_run0_t1.csv  6D_vector_run0_t2.csv  6D_vector_run0_t3.csv  6D_vector_run0_t4.csv  6D_vector_run0_t5.csv  6D_vector_run0_t6.csv
runs/run_1760069445905_9701/: 6D_vector_run0_t0.csv  6D_vector_run0_t1.csv  6D_vector_run0_t2.csv  6D_vector_run0_t3.csv  6D_vector_run0_t4.csv  6D_vector_run0_t5.csv  6D_vector_run0_t6.csv
runs/run_1760069856308_8600/: 6D_vector_run0_t0.csv  6D_vector_run0_t1.csv  6D_vector_run0_t2.csv  6D_vector_run0_t3.csv  6D_vector_run0_t4.csv  6D_vector_run0_t6.csv
runs/run_1760070353090_7745/: 6D_vector_run0_t0.csv  6D_vector_run0_t1.csv  6D_vector_run0_t2.csv  6D_vector_run0_t3.csv  6D_vector_run0_t4.csv  6D_vector_run0_t5.csv  6D_vector_run0_t6.csv
runs/run_1760071273586_1454/: 6D_vector_run0_t0.csv  6D_vector_run0_t1.csv  6D_vector_run0_t2.csv  6D_vector_run0_t3.csv  6D_vector_run0_t4.csv  6D_vector_run0_t5.csv  6D_vector_run0_t6.csv
runs/run_1760072590815_9888/: 6D_vector_run0_t2.csv  (+2 more)
src/: ActionInitialization.cc  Cli.cc  DetectorConstruction.cc  EventAction.cc  HornField.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
